--- a/packages/fluent/scss/card/_variables.scss
+++ b/packages/fluent/scss/card/_variables.scss
@@ -54,6 +54,9 @@ $kendo-card-focus-border: var( --kendo-component-border, initial ) !default;
 /// @group card
 $kendo-card-focus-shadow: var( --kendo-box-shadow-depth-4, none ) !default;
 
+/// Text weight of the card header.
+/// @group card
+$kendo-card-header-font-weight: var( --kendo-font-weight, initial ) !default;
 /// Horizontal padding of the card header.
 /// @group card
 $kendo-card-header-padding-x: map-get( $kendo-spacing, 3 ) !default;
@@ -99,6 +102,9 @@ $kendo-card-footer-text: inherit !default; // $header-text
 /// @group card
 $kendo-card-footer-border: inherit !default; // $header-border
 
+/// Text weight of the card title.
+/// @group card
+$kendo-card-title-font-weight: $kendo-card-header-font-weight !default;
 /// Bottom margin of the card title.
 /// @group card
 $kendo-card-title-margin-bottom: map-get( $kendo-spacing, 3 ) !default;
