--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -100,7 +100,7 @@
 @use "dialog";
 // @use "drawer";
 @use "notification";
-// @use "popover";
+@use "popover";
 // @use "responsivepanel";
 @use "window";
 
@@ -263,7 +263,7 @@
     @include dialog.styles();
     // @include drawer.styles();
     @include notification.styles();
-    // @include popover.styles();
+    @include popover.styles();
     // @include responsivepanel.styles();
 
 
