--- a/packages/fluent/scss/menu/_layout.scss
+++ b/packages/fluent/scss/menu/_layout.scss
@@ -1,7 +1,6 @@
 @use "../core/color-system" as *;
 @use '../core/variables' as *;
 @use './variables' as *;
-@use "../icon/_variables.scss"as *;
 
 @mixin kendo-menu--layout() {
 
@@ -293,7 +292,7 @@
                 top: 0;
                 left: 0;
                 width: 100%;
-                height: var( --kendo-icon-size, $kendo-icon-size );
+                height: var( --kendo-icon-size, 1rem );
                 border-bottom-width: 1px;
 
                 .k-icon:before {
@@ -305,7 +304,7 @@
                 top: 0;
                 right: 0;
                 height: 100%;
-                width: var( --kendo-icon-size, $kendo-icon-size );
+                width: var( --kendo-icon-size, 1rem );
                 border-left-width: 1px;
 
                 .k-icon:before {
@@ -317,7 +316,7 @@
                 bottom: 0;
                 left: 0;
                 width: 100%;
-                height: var( --kendo-icon-size, $kendo-icon-size );
+                height: var( --kendo-icon-size, 1rem );
                 border-top-width: 1px;
 
                 .k-icon:before {
@@ -329,7 +328,7 @@
                 top: 0;
                 left: 0;
                 height: 100%;
-                width: var( --kendo-icon-size, $kendo-icon-size );
+                width: var( --kendo-icon-size, 1rem );
                 border-right-width: 1px;
 
                 .k-icon:before {
