fix(scheduler): add support for k-i-arrow-rotate-cw

--- a/packages/default/scss/adaptive/_layout.scss
+++ b/packages/default/scss/adaptive/_layout.scss
@@ -322,7 +322,8 @@
                 border-radius: 50%;
             }
 
-            .k-i-reload {
+            .k-i-reload,
+            .k-i-arrow-rotate-cw {
                 font-size: 1em;
                 margin-right: .5em;
             }
