--- a/packages/fluent/scss/notification/_theme.scss
+++ b/packages/fluent/scss/notification/_theme.scss
@@ -23,7 +23,8 @@
             color: var( --INTERNAL--kendo-notification-icon-text, initial );
         }
 
-        >.k-i-close {
+        >.k-i-close,
+        >.k-i-x {
             color: inherit;
         }
     }
