fix(colorgradient): change icon selector to a more generic one

--- a/packages/fluent/scss/colorgradient/_layout.scss
+++ b/packages/fluent/scss/colorgradient/_layout.scss
@@ -168,7 +168,7 @@
             }
 
             // Needed for the double check icons
-            .k-i-check + .k-i-check {
+            .k-icon + .k-icon {
                 margin-inline-start: -13px;
             }
         }
