--- a/packages/default/scss/colorgradient/_layout.scss
+++ b/packages/default/scss/colorgradient/_layout.scss
@@ -170,7 +170,7 @@
             }
 
             // Needed for the double check icons
-            .k-i-check + .k-i-check {
+            .k-icon + .k-icon {
                 margin-left: -13px;
             }
         }
