fix(editor): add support for k-i-caret-br

--- a/packages/default/scss/editor/_layout.scss
+++ b/packages/default/scss/editor/_layout.scss
@@ -298,7 +298,8 @@
         border-bottom-color: inherit;
         cursor: se-resize;
 
-        .k-i-arrow-45-down-right {
+        .k-i-arrow-45-down-right,
+        .k-i-caret-br {
             display: none;
         }
     }
