--- a/packages/fluent/scss/editor/_layout.scss
+++ b/packages/fluent/scss/editor/_layout.scss
@@ -303,7 +303,8 @@
         border-bottom-color: inherit;
         cursor: se-resize;
 
-        .k-i-arrow-45-down-right {
+        .k-i-arrow-45-down-right,
+        .k-i-caret-br {
             display: none;
         }
     }
