--- a/packages/fluent/scss/scheduler/_layout.scss
+++ b/packages/fluent/scss/scheduler/_layout.scss
@@ -953,6 +953,8 @@
    .k-rtl {
         .k-scheduler,
         &.k-scheduler {
+            .k-i-caret-alt-left,
+            .k-i-caret-alt-right,
             .k-i-arrow-60-left,
             .k-i-arrow-60-right,
             .k-current-time-arrow-right {
