--- a/packages/fluent/scss/checkbox/_theme.scss
+++ b/packages/fluent/scss/checkbox/_theme.scss
@@ -30,16 +30,6 @@
         }
     }
 
-    .k-checkbox:indeterminate:hover,
-    .k-checkbox.k-hover.k-indeterminate {
-        &::after {
-            @include fill(
-                $bg: var( --kendo-checkbox-indeterminate-hover-bg, #{ $kendo-checkbox-indeterminate-hover-bg } ),
-                $border: var( --kendo-checkbox-indeterminate-hover-border, #{ $kendo-checkbox-indeterminate-hover-border } )
-            );
-        }
-    }
-
     // Focus state
     .k-checkbox:focus,
     .k-checkbox.k-focus {
@@ -60,6 +50,22 @@
         transition-property: border-width, border, border-color;
         transition-duration: 200ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.23, 1);
+
+        &::after {
+            @include fill(
+                $bg: var( --kendo-checkbox-indeterminate-border, #{ $kendo-checkbox-indeterminate-border } )
+            );
+        }
+
+        &:hover,
+        &.k-hover {
+            &::after {
+                @include fill(
+                    $bg: var( --kendo-checkbox-indeterminate-hover-border, #{ $kendo-checkbox-indeterminate-hover-border } ),
+                    $border: var( --kendo-checkbox-indeterminate-hover-border, #{ $kendo-checkbox-indeterminate-hover-border } )
+                );
+            }
+        }
     }
 
      // Indeterminate and disabled
@@ -67,8 +73,8 @@
      .k-checkbox.k-disabled.k-indeterminate {
         &::after {
             @include fill(
-            var( --kendo-checkbox-indeterminate-disabled-bg, #{ $kendo-checkbox-indeterminate-disabled-bg } ),
-            var( --kendo-checkbox-indeterminate-disabled-border, #{ $kendo-checkbox-indeterminate-disabled-border } )
+                var( --kendo-checkbox-indeterminate-disabled-border, #{ $kendo-checkbox-indeterminate-disabled-border } ),
+                var( --kendo-checkbox-indeterminate-disabled-border, #{ $kendo-checkbox-indeterminate-disabled-border } )
             );
         }
      }
@@ -92,7 +98,7 @@
             var( --kendo-checkbox-disabled-checked-border, #{ $kendo-checkbox-disabled-checked-border } )
         );
     }
-    
+
     // Checked and hovered
     .k-checkbox:checked:hover,
     .k-checkbox.k-checked.k-hover {
@@ -113,7 +119,7 @@
         );
     }
 
-    
+
     // Invalid
     .k-checkbox.k-invalid {
         @include fill( $border: var( --kendo-checkbox-invalid-border, #{ $kendo-checkbox-invalid-border} ) );
