chore(checkbox): fix for disabled items in fluent

--- a/packages/fluent/scss/checkbox/_theme.scss
+++ b/packages/fluent/scss/checkbox/_theme.scss
@@ -66,18 +66,19 @@
                 );
             }
         }
+
+        // Indeterminate and disabled
+        &:disabled,
+        &.k-disabled {
+            &::after {
+                @include fill(
+                    var( --kendo-checkbox-indeterminate-disabled-border, #{ $kendo-checkbox-indeterminate-disabled-border } ),
+                    var( --kendo-checkbox-indeterminate-disabled-border, #{ $kendo-checkbox-indeterminate-disabled-border } )
+                );
+            }
+        }
     }
 
-     // Indeterminate and disabled
-     .k-checkbox:disabled:indeterminate,
-     .k-checkbox.k-disabled.k-indeterminate {
-        &::after {
-            @include fill(
-                var( --kendo-checkbox-indeterminate-disabled-border, #{ $kendo-checkbox-indeterminate-disabled-border } ),
-                var( --kendo-checkbox-indeterminate-disabled-border, #{ $kendo-checkbox-indeterminate-disabled-border } )
-            );
-        }
-     }
 
     // Checked
     .k-checkbox:checked,
@@ -87,27 +88,25 @@
             var( --kendo-checkbox-checked-bg, #{ $kendo-checkbox-checked-bg } ),
             var( --kendo-checkbox-checked-border, #{ $kendo-checkbox-checked-border } )
         );
-    }
 
-    // Checked and disabled
-    .k-checkbox:checked:disabled,
-    .k-checkbox.k-checked.k-disabled {
-        @include fill(
-            var( --kendo-checkbox-disabled-checked-text, #{ $kendo-checkbox-disabled-checked-text } ),
-            var( --kendo-checkbox-disabled-checked-bg, #{ $kendo-checkbox-disabled-checked-bg } ),
-            var( --kendo-checkbox-disabled-checked-border, #{ $kendo-checkbox-disabled-checked-border } )
-        );
-    }
+        // Checked and hovered
+        &:hover,
+        &.k-hover {
+            @include fill(
+                $bg: var( --kendo-checkbox-checked-hover-bg, #{ $kendo-checkbox-checked-hover-bg } ),
+                $border: var( --kendo-checkbox-checked-hover-border, #{ $kendo-checkbox-checked-hover-border } )
+            );
+        }
 
-    // Checked and hovered
-    .k-checkbox:checked:hover,
-    .k-checkbox.k-checked.k-hover {
-        @include fill(
-            $bg: var( --kendo-checkbox-checked-hover-bg, #{ $kendo-checkbox-checked-hover-bg } ),
-            $border: var( --kendo-checkbox-checked-hover-border, #{ $kendo-checkbox-checked-hover-border } )
-        );
+        &:disabled,
+        &.k-disabled {
+            @include fill(
+                var( --kendo-checkbox-disabled-checked-text, #{ $kendo-checkbox-disabled-checked-text } ),
+                var( --kendo-checkbox-disabled-checked-bg, #{ $kendo-checkbox-disabled-checked-bg } ),
+                var( --kendo-checkbox-disabled-checked-border, #{ $kendo-checkbox-disabled-checked-border } )
+            );
+        }
     }
-
 
     // Disabled
     .k-checkbox:disabled,
