chore(upload): upload fixes for fluent

--- a/packages/fluent/scss/upload/_theme.scss
+++ b/packages/fluent/scss/upload/_theme.scss
@@ -48,7 +48,7 @@
 
         }
 
-        .k-upload-status {
+        .k-dropzone .k-upload-status {
             color: var( --kendo-upload-status-text, #{$kendo-upload-status-text} );
             opacity: var( --kendo-upload-status-text-opacity, #{$kendo-upload-status-text-opacity} );
         }
